# ClassSystem

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy-docs.sh  deploy.sh  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sync-to-gitee.sh  tailwind.config.js  update.bat  version.txt
.github/workflows/: deploy-docs.yml  main.yml  sync-to-gitee.yml
assets/: ClassAdmin.qrc  ClassSystem.qrc  ICON.RC  assets.qrc
assets/img/: logo.psd  menu-opened.psd  menu.psd
assets/other/: about.md  sentences.txt  students-template.xlsx
assets/text/: sentences.txt  update-info-msg.md
class-system-www/: package.json  pnpm-lock.yaml
docs/: README.md  class-admin.md  class-data.md  class-system.md  main.md  package.json
docs/.vuepress/: config.js  config.ts  sidebar.js  theme.ts
docs/.vuepress/styles/: config.scss  index.scss  palette.scss
docs/class-admin/: README.md  import.md  meal-stu.md  notices-and-events.md  password.md  stu-on-duty.md  students.md  sync-drop.md  temporary.md  tool-bar.md
docs/class-system/: README.md  class-system.md  main-panel.md  popup-menu.md
include/QAnimationStackedWidget/: QAnimationStackedWidget.h
lib/: quazip1-qt5.lib  quazip1-qt5d.lib
src/: ClassData.cpp  ClassData.h  ImgPaster.cpp  ImgPaster.h  MainPanel.cpp  MainPanel.h  MenuButton.cpp  MenuButton.h  PopupMenu.cpp  PopupMenu.h  RollCallWindow.cpp  RollCallWindow.h  ScreenCapturer.cpp  SharedMemoryUtils.h  TableWindow.cpp  TitleWidget.cpp  UpdateDownloader.cpp  UpdateDownloader.h  UpdaterMain.cpp  VersionDisplay.cpp  VersionDisplay.h  config.h.in  main.cpp  pch.h
src/ClassAdmin/: Commands.h  EditMealStuDialog.cpp  EditMealStuDialog.h  EditMealStuDialog.ui  ImportDialog.cpp  ImportDialog.h  IntDelegate.h  ItemDelegates.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NoticesCellWidget.cpp  NoticesCellWidget.h  NoticesCellWidget.ui  ResetPwdDialog.cpp  ResetPwdDialog.h  StuOnDutyCellWidget.cpp  StuOnDutyCellWidget.h  StuOnDutyCellWidget.ui  main.cpp
src/ClassData/: ClassData.cpp  ClassData.h  classdata.cpp  classdata.h
src/ClassSystem/: ClassSystem.cpp  ClassSystem.h  ClassSystem.ui  ImgPaster.cpp  MainPanel.cpp  MainPanel.h  MenuButton.cpp  PopupMenu.cpp  PopupMenu.h  RollCallWindow.cpp  RollCallWindow.h  RollCallWindow.ui  ScreenCapturer.cpp  TableWindow.cpp  TableWindow.h  TitleWidget.cpp  TitleWidget.h  main.cpp
src/ClassSystem/Core/: DownloadWorker.cpp  DownloadWorker.h  Updater.cpp  Updater.h
src/ClassSystem/Widgets/: ClassSystem.cpp  ClassSystem.h  ClassSystem.ui  ClockWidget.cpp  ClockWidget.h  ImgPaster.cpp  ImgPaster.h  MainPanel.cpp  MainPanel.h  MenuButton.cpp  MenuWidget.cpp  MenuWidget.h  PopupMenu.cpp  PopupMenu.h  ScreenCapturer.cpp  ScreenCapturer.h  SuspendedWidget.cpp  SuspendedWidget.h  TableWindow.cpp  TableWindow.h  UpdateDialog.cpp  UpdateDialog.h
src/Updater/: Updater.py
src/cs/: socket.h
src/main/: checkUpdate.ts  iconWindow.ts  index.ts  info.ts  mainWindow.ts  menuWindow.ts  sentences.ts  settings.ts  tray.ts  weather.ts  window-messages.ts
src/native/: binding.gyp  embed-desktop.cc  embed-desktop.cpp  package-lock.json  package.json
src/preload/: index.d.ts  preload.ts
src/renderer/: extraWindow.html  iconWindow.html  index.html  mainWindow.html  menuWindow.html
src/renderer/src/: App.tsx  App.vue  main.ts
src/renderer/src/ExtraWindow/: App.tsx  index.css  main.tsx
src/renderer/src/ExtraWindow/components/: Header.tsx
src/renderer/src/ExtraWindow/tabs/: RollCall.tsx  Tables.tsx
src/renderer/src/IconWindow/: App.tsx  index.css  main.tsx
src/renderer/src/MainWindow/: App.tsx  index.css  main.tsx
src/renderer/src/MainWindow/assets/: index.css
src/renderer/src/MainWindow/components/: Arrangements.tsx  Events.tsx  Header.tsx  Lessons.tsx  Notices.tsx  Weather.tsx
src/renderer/src/MainWindow/stores/: info.ts  sentences.ts
src/renderer/src/MenuWindow/: App.tsx
src/renderer/src/assets/: fonts.css
src/renderer/src/assets/css/: styles.less
src/renderer/src/components/: DateTime.vue
src/renderer/src/types/: info.ts  sentences.ts  weather.ts
